--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@types/react-big-calendar": "^1.16.0",
+    "icons": "^1.0.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "recharts": "^2.15.0",
     "zod": "^3.24.1"
   },
