--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@types/react-big-calendar": "^1.16.0",
+    "axios": "^1.7.9",
     "icons": "^1.0.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
