--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-big-calendar": "^1.16.0",
     "axios": "^1.7.9",
     "icons": "^1.0.0",
+    "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18.3.1",
