--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
+    "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-select": "^5.10.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.0",
     "zod": "^3.24.1"
