--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-big-calendar": "^1.16.0",
     "axios": "^1.7.9",
     "icons": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
@@ -31,6 +32,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
