--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-select": "^5.10.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.0",
     "zod": "^3.24.1"
