--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-table": "^7.8.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.0",
+    "sharp": "^0.33.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
